squashing bug

--- a/sass/_pagecolors.scss
+++ b/sass/_pagecolors.scss
@@ -203,7 +203,7 @@
 				background: rgba(95, 208, 254, 0.15) !important;
 			}
 		}
-		.fa {
+		.icon-row .fa {
 			background: $blue;
 		}
 	}
